# trainlens-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: anomaly_detector.py  ask.py  diagnosis.py  main.py  models.py
backend/tests/: test_anomaly_detector.py  test_ask.py  test_diagnosis.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  PRD.md  ROADMAP.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: trainlensApi.ts
frontend/src/components/: AnalysisLoadingCard.tsx  AnalysisSummary.tsx  AnomalyCard.tsx  AskTrainLensCard.tsx  DataSourceCard.tsx  DiagnosisPanel.tsx  ExportPostmortemButton.tsx  GpuUtilizationChart.tsx  JsonUploadCard.tsx  LossCurveChart.tsx  MemoryUsageChart.tsx  SampleRunSelector.tsx
frontend/src/data/: sampleRuns.ts
frontend/src/styles/: globals.css
frontend/src/types/: analysis.ts
frontend/src/utils/: chartHelpers.ts  postmortem.ts  validateTrainingRun.ts
sample_logs/: diverging_run.json  gpu_underutilized.json  normal_run.json  oom_risk.json  training_stall.json  vanishing_gradients.json
